--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+body {
+    background-color: black;
+}
+
 @media only screen and (min-width: 675px) {
     body {
         background-color: green;
